docs: add docs for services, entities